[workspace]

default-members = ["test-game"]
members = [
    "test-engine",
    "test-game",
    "test-game-android",
    "render-test",
    "ui-test",
    "ui-benchmark",
    "deps/ui/ui-proc-test",
    "debug-client",
    "fuzz"
]

resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.metadata.cargo-machete]
ignored = []

[workspace.dependencies]
aes-gcm = "0.10.3"
android_logger = "0.15"
anyhow = "1.0"
atomic_float = "1.1"
bit_ops = "0.1"
bytemuck = { version = "1.15", features = ["derive"] }
cgmath = "0.18"
chrono = "0.4"
dirs = "6.0"
educe = "0.6.0"
fern = "0.7"
image = "0.25"
indexmap = "2.2"
jni = "0.21.1"
log = "0.4"
lyon = "1.0"
nonempty = "0.12.0"
quote = "1.0"
rapier2d = { version = "0.28", features = ["simd-nightly"] }
resvg = "0.45"
rodio = "0.21"
rust_decimal = "1.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
tiny-skia = "0.11"
web-time = "1.0.0"
arbitrary = { version = "1.4", features = ["derive"] }
wasm-bindgen-futures = "0.4"
pollster = "0.4"

wgpu = "26.0"
wgpu_text = "26.0"
winit = "0.30"

plat = "0.2.0"
reflected = "0.26"
refs = { version = "0.17.0", default-features = true }
vents = "0.9.0"

audio = { path = "deps/audio" }
debug = { path = "deps/debug" }
dispatch = { path = "deps/dispatch" }
game = { path = "deps/game" }
generate = { path = "deps/generate" }
gm = { path = "deps/gm" }
level = { path = "deps/level" }
level-proc = { path = "deps/level/level-proc" }
render = { path = "deps/render" }
scene = { path = "deps/scene" }
store = { path = "deps/store" }
test-engine = { path = "test-engine" }
test-game = { path = "test-game" }
ui = { path = "deps/ui" }
ui-benchmark = { path = "ui-benchmark" }
ui-proc = { path = "deps/ui/ui-proc" }
utils = { path = "deps/utils" }
window = { path = "deps/window" }

[patch.crates-io]
#wgpu = { git = "https://github.com/VladasZ/wgpu", rev = "31ef1f08d238c2a092be1186f7133f1928b34a8a" }
#wgpu = { path = "../3/wgpu/wgpu" }
#vents = { path = "../deps/vents/vents" }
#reflected = { path = "../deps/reflected/reflected" }
#wgpu_text = { git = "https://github.com/VladasZ/wgpu-text", rev = "10cd78a848cf8e911a6780c011dbd5be33f37a1c" }
