
[workspace]

default-members = ["test-game"]
members = [
  "deps/ui/ui-proc-test",
  "example-app",
  "fuzz",
  "inspector",
  "render-test",
  "test-engine",
  "test-game",
  "test-game-android",
  "ui-test",
]

resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.metadata.cargo-machete]
ignored = []

[workspace.dependencies]
android_logger = "0.15"
anyhow = "1.0"
arbitrary = { version = "1.4", features = ["derive"] }
async-std = "1.13"
atomic_float = "1.1"
bit_ops = "0.2"
bytemuck = { version = "1.25", features = ["derive"] }
cgmath = "0.18"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
ctor = "0.6"
dirs = "6.0"
dotenvy = "0.15"
educe = "0.6"
fastrand = "2.3"
fern = "0.7"
gloo-timers = { version = "0.3", features = ["futures"] }
hex = "0.4"
image = "0.25"
indexmap = "2.13"
instant = { version = "0.1", features = ["wasm-bindgen"] }
jni = "0.21"
kira = "0.11"
log = "0.4"
lyon = "1.0"
nonempty = "0.12"
parking_lot = "0.12"
paste = "1.0"
pollster = "0.4"
pretty_assertions = "1.4"
quote = "1.0"
rapier2d = { version = "0.31", features = ["simd-nightly"] }
resvg = "0.46"
rfd = "0.17"
rust_decimal = "1.40"
sentry = { version = "0.46", default-features = false, features = ["reqwest", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
tiny-skia = "0.12"
tokio = { version = "1.49", features = ["full"] }
usvg = "0.46"
wasm-bindgen-futures = "0.4"
web-time = "1.1"

wgpu = "28.0"
wgpu_text = "28.0"
winit = "0.30"

# hreads = { path = "../deps/hreads" }
hreads = "0.13"

netrun = "0.26"
# refs = { path = "../deps/refs/refs" }
refs = { version = "0.40", default-features = true }
# netrun = { path = "../deps/netrun/netrun" }
plat = "0.8"
reflected = "0.29"
vents = "0.15"

audio = { path = "deps/audio" }
filesystem = { path = "deps/filesystem" }
game = { path = "deps/game" }
generate = { path = "deps/generate" }
gm = { path = "deps/gm" }
inspect = { path = "deps/inspect" }
level = { path = "deps/level" }
level-proc = { path = "deps/level/level-proc" }
render = { path = "deps/render" }
scene = { path = "deps/scene" }
store = { path = "deps/store" }
test-engine = { path = "test-engine" }
test-game = { path = "test-game" }
ui = { path = "deps/ui" }
ui-proc = { path = "deps/ui/ui-proc" }
utils = { path = "deps/utils" }
window = { path = "deps/window" }

[patch.crates-io]
#wgpu = { git = "https://github.com/VladasZ/wgpu", rev = "31ef1f08d238c2a092be1186f7133f1928b34a8a" }
#wgpu = { path = "../3/wgpu/wgpu" }
#vents = { path = "../deps/vents/vents" }
#reflected = { path = "../deps/reflected/reflected" }
#wgpu_text = { git = "https://github.com/VladasZ/wgpu-text", rev = "0f25a5fa912cafd6161158fce16f0ae5236047ca" }
#hreads = { path = "../deps/hreads" }
