[package]
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition.workspace = true
name = "debug-client"
version.workspace = true

[[bin]]
name = "debug-client"

[lib]
crate-type = ["rlib", "staticlib"]
name = "debug_client"

[dependencies]
anyhow = { workspace = true }

debug = { workspace = true }
test-engine = { workspace = true, features = ["default"] }

[build-dependencies]
plat = { workspace = true }
