[package]
name = "gl_image"
version = "0.1.0"
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition = "2018"

[lib]
name = "gl_image"
crate-type = ["rlib", "staticlib"]

[dependencies]
image = "0.23.14"
cfg-if = "1.0.0"
serde = { version = "1.0.130", features = ["derive"] }


gm = { path = "../gm" }
tools = { path = "../.rdeps/tools" }
gl_wrapper = { path = "../gl_wrapper" }
