[package]
name = "gl_wrapper"
version = "0.1.0"
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition = "2018"

[lib]
name = "gl_wrapper"
crate-type = ["rlib", "staticlib"]

[dependencies]
guard = "0.5.0"
cfg-if = "1.0.0"

gm = { path = "../gm" }
tools = { path = "../.rdeps/tools" }

[target.'cfg(not(any(target_os="ios", target_os="android")))'.dependencies]
gl = "0.14.0"
glfw = "0.42.0"

[target.'cfg(any(target_os="ios", target_os="android"))'.dependencies]
mashup = "0.1.12"
gles31-sys = { path = "../.rdeps/gles31-sys" }
