[package]
name = "gl_wrapper"
version = "0.1.0"
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition = "2021"

[lib]
name = "gl_wrapper"
crate-type = ["rlib", "staticlib"]

[dependencies]
log = "0"
cfg-if = "1"

gm = { path = "../gm" }
tools = { path = "../.rdeps/tools" }

[target.'cfg(not(any(target_os="ios", target_os="android")))'.dependencies]
gl = "0"
glfw = "0"

[target.'cfg(any(target_os="ios", target_os="android"))'.dependencies]
mashup = "0"
gles31-sys = { path = "../.rdeps/gles31-sys" }
