[package]
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition.workspace = true
name = "inspector"
version.workspace = true

[[bin]]
name = "inspector"

[dependencies]
anyhow = { workspace = true }
hreads = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }

inspect = { workspace = true }
netrun = { workspace = true }
test-engine = { workspace = true }
