[package]
edition = "2021"
name = "noise"
version = "0.1.0"

[[bin]]
name = "noise"
path = "src/main.rs"


[dependencies]
anyhow = { workspace = true }
derivative = { workspace = true }
tokio = { workspace = true }

rtools = { workspace = true }

gen = { workspace = true }
old_engine = { workspace = true }
ui = { workspace = true }
ui_views = { workspace = true }
