[package]
edition = "2021"
name = "noise"
version = "0.1.0"

[[bin]]
name = "noise"
path = "src/main.rs"

[lib]
crate-type = ["rlib", "staticlib"]
name = "noise"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }

gen = { workspace = true }
test-engine = { workspace = true }
