[package]
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition = "2021"
name = "old_test_game"
version = "0.1.0"

[[bin]]
name = "old_test_game"

[lib]
crate-type = ["rlib", "staticlib", "dylib"]
name = "old_test_game_lib"

[dependencies]
anyhow = { workspace = true }
derivative = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
refs = { workspace = true }
ui = { workspace = true }
ui_views = { workspace = true }

manage = { workspace = true }
old_engine = { workspace = true }
rtools = { workspace = true }

[target.'cfg(target_os="android")'.dependencies]
android-ndk-sys = "0.2"

[build-dependencies]
cfg_aliases = { workspace = true }
