[package]
edition = "2024"
name = "render-test"
version = "0.1.0"

[[bin]]
name = "render-test"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

refs = { workspace = true }

gm = { workspace = true }
render = { workspace = true }
test-engine = { workspace = true }
window = { workspace = true }
