[package]
edition = "2024"
name = "render-test"

[[bin]]
name = "render-test"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

refs = { workspace = true }

render = { workspace = true }
test-engine = { workspace = true }
window = { workspace = true }
