[package]
edition.workspace = true
name = "render-test"
version.workspace = true

[[bin]]
name = "render-test"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }

refs = { workspace = true }

render = { workspace = true }
test-engine = { workspace = true }
window = { workspace = true }
