[package]
name = "sprites"
version = "0.1.0"
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition = "2021"

[lib]
name = "sprites"
crate-type = ["rlib", "staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typetag = "0"
rapier2d = { version = "0", features = [ "parallel", "simd-stable" ] }

gm = { path = "../gm" }
gl_image = { path = "../gl_image" }

tools = { path = "../.rdeps/tools" }