[package]
name = "sprites"
version = "0.1.0"
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition = "2021"

[lib]
name = "sprites"
crate-type = ["rlib", "staticlib"]

[dependencies]
crossbeam = "0.8.1"
rapier2d = { version = "0.11", features = [ "parallel", "simd-stable" ] }

gm = { path = "../gm" }
gl_image = { path = "../gl_image" }

rtools = { path = "../rtools" }