[package]
edition.workspace = true
name = "test-engine"
version.workspace = true

[lib]
#crate-type = ["rlib", "staticlib", "dylib"]
crate-type = ["rlib", "staticlib"]
name = "test_engine"

[features]
default = []
webgl = ["wgpu/webgl"]

[dependencies]
anyhow = { workspace = true }
educe = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
web-time = { workspace = true }
wgpu = { workspace = true }
wgpu_text = { workspace = true }
winit = { workspace = true }

dispatch = { workspace = true }
reflected = { workspace = true }
refs = { workspace = true }
vents = { workspace = true }

audio = { workspace = true }
game = { workspace = true }
generate = { workspace = true }
gm = { workspace = true }
level = { workspace = true }
render = { workspace = true }
store = { workspace = true }
ui = { workspace = true }
ui-proc = { workspace = true }
window = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = { workspace = true }
pollster = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen-futures = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { workspace = true }
winit = { workspace = true, features = ["android-game-activity"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { workspace = true }

[build-dependencies]
plat = { workspace = true }
