[package]
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition = "2021"
name = "test-game-android"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "test_game"

[dependencies]
jni = { workspace = true }

test-game = { workspace = true }

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]
min_sdk_version = 23
target_sdk_version = 29
