[package]
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition.workspace = true
name = "test-game-android"
version.workspace = true

[lib]
crate-type = ["cdylib"]
name = "test_game"

[dependencies]
jni = { workspace = true }

test-game = { workspace = true }

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]
min_sdk_version = 23
target_sdk_version = 29
