[package]
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition.workspace = true
name = "test-game"
version.workspace = true

[[bin]]
name = "test-game"

[lib]
crate-type = ["rlib", "staticlib"]
name = "test_game"

[features]
default = []

webgl = ["test-engine/webgl"]
debug = ["test-engine/debug"]

[dependencies]
test-engine = { workspace = true }
ui-benchmark = { workspace = true }
fastrand = { workspace = true }

[build-dependencies]
plat = { workspace = true }
