[package]
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition.workspace = true
name = "test-game"
version.workspace = true

[[bin]]
name = "test-game"

[lib]
crate-type = ["rlib", "staticlib"]
name = "test_game"

[features]
default = []

webgl = ["test-engine/webgl"]

[dependencies]
anyhow = { workspace = true }
fastrand = { workspace = true }
serde = { workspace = true }

netrun = { workspace = true }

ui-benchmark = { workspace = true }
test-engine = { workspace = true }


[build-dependencies]
plat = { workspace = true }
