[package]
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition.workspace = true
name = "test-game"
version.workspace = true

[[bin]]
name = "test-game"

[lib]
crate-type = ["rlib", "staticlib"]
name = "test_game"

[features]
default = []

webgl = ["test-engine/webgl"]

[dependencies]
anyhow = { workspace = true }
fastrand = { workspace = true }
log = { workspace = true }
netrun = { workspace = true }
parking_lot.workspace = true
serde = { workspace = true }

test-engine = { workspace = true }
ui-benchmark = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
plat = { workspace = true }
