[package]
name = "test"
version = "0.1.0"
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition = "2021"

[[bin]]
name = "test"

[dependencies]

serde = "1.0.130"
serde_json = "1.0.69"
erased-serde = "0.3.16"

gm = { path = "../gm" }

gl_wrapper = { path = "../gl_wrapper" }
test_engine = { path = "../test_engine" }

tools = { path = "../.rdeps/tools" }
