[package]
edition = "2021"
name = "test_engine"
version = "0.1.0"

[[bin]]
name = "test_engine"
path = "src/main.rs"


[dependencies]
anyhow = { workspace = true }
derivative = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

old_engine = { workspace = true }
