[package]
edition = "2021"
name = "test_engine"
version = "0.1.0"

[lib]
crate-type = ["rlib", "staticlib", "dylib"]
name = "test_engine"

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
colored = { workspace = true }
derivative = { workspace = true }
env_logger = { workspace = true }
home = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
wgpu = { workspace = true }
wgpu_text = { workspace = true }
winit = { workspace = true }

dispatch = { workspace = true }
manage = { workspace = true }
reflected = { workspace = true }
refs = { workspace = true }
rtools = { workspace = true }
vents = { workspace = true }

audio = { workspace = true }
gm = { workspace = true }
rest = { workspace = true }
ui = { workspace = true }
ui_proc = { workspace = true }
ui_views = { workspace = true }
wgpu_wrapper = { workspace = true }

[build-dependencies]
cfg_aliases = { workspace = true }
