[package]
edition = "2021"
name = "test_engine"
version = "0.1.0"

[lib]
#crate-type = ["rlib", "staticlib", "dylib"]
crate-type = ["rlib", "staticlib"]
name = "test_engine"

[features]
audio = ["dep:audio"]
default = ["audio"]

[dependencies]
anyhow = { workspace = true }
derivative = { workspace = true }
env_logger = { workspace = true }
home = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wgpu = { workspace = true }
wgpu_text = { workspace = true }
winit = { workspace = true }

dispatch = { workspace = true }
manage = { workspace = true }
reflected = { workspace = true }
refs = { workspace = true }
vents = { workspace = true }

audio = { workspace = true, optional = true }
call_counter = { workspace = true }
gm = { workspace = true }
store = { workspace = true }
ui = { workspace = true }
ui_proc = { workspace = true }
wgpu_wrapper = { workspace = true }
sprites = { workspace = true }

[build-dependencies]
cfg_aliases = { workspace = true }
