[package]
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition = "2021"
name = "test_game"
version = "0.1.0"

[[bin]]
name = "test_game"

[lib]
crate-type = ["rlib", "staticlib"]
name = "test_game"

[dependencies]
derivative = { workspace = true }
tokio = { workspace = true }

test_engine = { workspace = true }

[build-dependencies]
cfg_aliases = { workspace = true }
