[package]
edition = "2024"
name = "ui-benchmark"
version = "0.1.0"

[[bin]]
name = "ui-benchmark"
path = "src/main.rs"

[lib]
crate-type = ["rlib", "staticlib"]
name = "ui_benchmark"

[dependencies]
anyhow = { workspace = true }
fake = { workspace = true }
tokio = { workspace = true }

test-engine = { workspace = true }
