[package]
edition.workspace = true
name = "ui-benchmark"
version.workspace = true

[[bin]]
name = "ui-benchmark"
path = "src/main.rs"

[lib]
crate-type = ["rlib", "staticlib"]
name = "ui_benchmark"

[dependencies]
anyhow = { workspace = true }
fake = { workspace = true }
tokio = { workspace = true }

test-engine = { workspace = true }
