[package]
edition.workspace = true
version.workspace = true

name = "ui-test"

[[bin]]
name = "ui-test"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
instant = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }

serde = { version = "1.0.228", features = ["derive"] }
test-engine = { workspace = true }
