[package]
edition.workspace = true
version.workspace = true

name = "ui-test"

[[bin]]
name = "ui-test"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
instant = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

inspect = { workspace = true }
test-engine = { workspace = true }
test-game = { workspace = true }
