[package]
name = "ui"
version = "0.1.0"
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition = "2021"

[lib]
name = "ui"
crate-type = ["rlib", "staticlib"]

[dependencies]
log = "0"
fontdue = "0"
lazy_static = "1"

gm = { path = "../gm" }
gl_image = { path = "../gl_image" }
gl_wrapper = { path = "../gl_wrapper" }

tools = { path = "../.rdeps/tools" }

[target.'cfg(not(any(target_os="ios", target_os="android")))'.dependencies]
gl = "0"
glfw = "0"

[target.'cfg(any(target_os="ios", target_os="android"))'.dependencies]
mashup = "0"
gles31-sys = { path = "../.rdeps/gles31-sys" }