[package]
edition = "2021"
name = "ui_benchmark"
version = "0.1.0"

[[bin]]
name = "ui_benchmark"
path = "src/main.rs"


[dependencies]
anyhow = { workspace = true }
derivative = { workspace = true }
tokio = { workspace = true }

old_engine = { workspace = true }
rtools = { workspace = true }
ui = { workspace = true }
ui_views = { workspace = true }
