[package]
name = "ui_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ui_test"
path = "src/main.rs"

[[bin]]
name = "button_test"
path = "src/button.rs"

[[bin]]
name = "switch_test"
path = "src/switch.rs"


[dependencies]
log = { workspace = true }
glfw = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
derivative = { workspace = true }
rtools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ui = { workspace = true }
ui_views = { workspace = true }
test_engine = { workspace = true }
test_game = { workspace = true }
