[package]
edition = "2021"
name = "ui_test"
version = "0.1.0"

[[bin]]
name = "ui_test"
path = "src/main.rs"


[dependencies]
anyhow = { workspace = true }
derivative = { workspace = true }
log = { workspace = true }
old_engine = { workspace = true }
rtools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ui = { workspace = true }
ui_views = { workspace = true }
