[package]
edition = "2021"
name = "wgpu"
version = "0.1.0"

[[bin]]
name = "wgpu"
path = "src/main.rs"


[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.11.0"
log = "0.4"
wgpu = "0.19.1"
winit = "0.29.10"

anyhow = { workspace = true }
image = { workspace = true }
tokio = { workspace = true }
