[package]
edition = "2021"
name = "wgpu"
version = "0.1.0"

[[bin]]
name = "wgpu"
path = "src/main.rs"


[dependencies]
env_logger = "0.11.0"
wgpu = "0.19.1"
winit = "0.29.10"

anyhow = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

gl_wrapper = { workspace = true }
gm = { workspace = true }
