[package]
edition = "2021"
name = "wgpu_test"
version = "0.1.0"

[[bin]]
name = "wgpu_test"
path = "src/main.rs"


[dependencies]
anyhow = { workspace = true }
derivative = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

test_engine = { workspace = true }
